Fixed Scroll Bug
Fixed problem where horizontal scrollbar shifted the editor out of alignment with the line display when it appeared

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,7 +133,7 @@ body, html {
 	resize: none;
 	border: none;
 	outline: none;
-	overflow: overlay;
+	overflow: auto;
 	overflow-wrap: unset;
 	white-space: pre;
 	background-color: var(--background);
